--- a/src/main/resources/view/LoginLayout.fxml
+++ b/src/main/resources/view/LoginLayout.fxml
@@ -7,10 +7,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.cs174a.buzmo.controllers.LoginController">
    <children>
       <TextField fx:id="emailTextField" layoutX="229.0" layoutY="141.0" prefHeight="27.0" prefWidth="212.0" promptText="Email" />
+      <PasswordField fx:id="passwordField" layoutX="229.0" layoutY="177.0" prefHeight="27.0" prefWidth="212.0" promptText="Password" />
       <Text layoutX="187.0" layoutY="159.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" />
       <Text layoutX="160.0" layoutY="195.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
       <Text layoutX="183.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to Buzmo">
@@ -21,6 +21,5 @@
       <Button fx:id="loginButton" layoutX="194.0" layoutY="237.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="103.0" text="Login" />
       <Button fx:id="closeButton" layoutX="303.0" layoutY="237.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="103.0" text="Close" />
       <Text layoutX="196.0" layoutY="473.0" strokeType="OUTSIDE" strokeWidth="0.0" text="By Jordan Nyugen and Sal Olivares" />
-      <PasswordField fx:id="passwordField" layoutX="229.0" layoutY="177.0" prefHeight="27.0" prefWidth="212.0" promptText="Password" />
    </children>
 </AnchorPane>
