--- a/src/main/resources/view/HomeLayout.fxml
+++ b/src/main/resources/view/HomeLayout.fxml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.cs174a.buzmo.controllers.HomeController">
    <children>
-      <Text layoutX="62.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="HOME VIEW HERE">
+      <Text layoutX="221.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Menu">
          <font>
-            <Font size="55.0" />
+            <Font size="28.0" />
          </font>
       </Text>
+      <Button layoutX="233.0" layoutY="92.0" mnemonicParsing="false" prefHeight="123.0" prefWidth="144.0" text="Go to Private Message Menu" textAlignment="CENTER" wrapText="true" />
+      <Button layoutX="396.0" layoutY="92.0" mnemonicParsing="false" prefHeight="123.0" prefWidth="144.0" text="Go to ChatGroup Menu" textAlignment="CENTER" wrapText="true" />
+      <Button layoutX="71.0" layoutY="92.0" mnemonicParsing="false" prefHeight="123.0" prefWidth="144.0" text="Go to MyCircle Menu" textAlignment="CENTER" wrapText="true" />
+      <Button layoutX="36.0" layoutY="289.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="167.0" text="Summary Report" textAlignment="CENTER" wrapText="true" />
+      <Button layoutX="222.0" layoutY="289.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="167.0" text="Search People/Friend Requests" textAlignment="CENTER" wrapText="true" />
+      <Button layoutX="406.0" layoutY="289.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="167.0" text="Search Recent Messages" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="logoutButton" layoutX="222.0" layoutY="444.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="167.0" text="Logout" textAlignment="CENTER" wrapText="true" />
+      <Label fx:id="loggedinLabel" layoutX="14.0" layoutY="436.0" prefHeight="17.0" prefWidth="193.0" text="Logged In:" />
+      <Label fx:id="isManagerLabel" layoutX="14.0" layoutY="457.0" prefHeight="17.0" prefWidth="193.0" text="Is Manager?:" />
    </children>
 </AnchorPane>
