--- a/src/main/resources/view/TopicWordsLayout.fxml
+++ b/src/main/resources/view/TopicWordsLayout.fxml
@@ -12,11 +12,13 @@
       <ListView fx:id="topicList" layoutX="137.0" layoutY="134.0" prefHeight="300.0" prefWidth="326.0" />
       <TextField fx:id="wordTextField" layoutX="137.0" layoutY="95.0" prefHeight="27.0" prefWidth="205.0" promptText="Topic Word to Add" />
       <Button fx:id="addButton" layoutX="354.0" layoutY="95.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="109.0" text="Add" />
-      <Button fx:id="removeButton" layoutX="191.0" layoutY="441.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="218.0" text="Remove selected topic word" />
+      <Button fx:id="removeButton" layoutX="183.0" layoutY="446.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="250.0" text="Remove selected topic word" />
       <Label layoutX="221.0" layoutY="32.0" prefHeight="30.0" prefWidth="159.0" text="Topic Words" textAlignment="CENTER">
          <font>
             <Font size="25.0" />
          </font>
       </Label>
+      <Button fx:id="backButton" layoutX="13.0" layoutY="13.0" mnemonicParsing="false" text="&lt; Back" />
+      <Button fx:id="refreshButton" layoutX="476.0" layoutY="148.0" mnemonicParsing="false" prefHeight="269.0" prefWidth="95.0" text="Refresh List" />
    </children>
 </AnchorPane>
