--- a/src/main/resources/view/FriendRequestLayout.fxml
+++ b/src/main/resources/view/FriendRequestLayout.fxml
@@ -5,13 +5,13 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.cs174a.buzmo.controllers.HomeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.cs174a.buzmo.controllers.FriendRequestController">
    <children>
       <ListView fx:id="requestsListView" layoutX="31.0" layoutY="58.0" prefHeight="365.0" prefWidth="529.0" />
       <Button fx:id="backButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="&lt; Back" />
       <Button fx:id="rejectButton" layoutX="156.0" layoutY="445.0" mnemonicParsing="false" text="Reject" />
       <Button fx:id="acceptButton" layoutX="59.0" layoutY="445.0" mnemonicParsing="false" text="Accept" />
       <Label layoutX="279.0" layoutY="33.0" text="Friend Requests" />
+      <Button fx:id="refreshButton" layoutX="463.0" layoutY="445.0" mnemonicParsing="false" text="Refresh" />
    </children>
 </AnchorPane>
