--- a/src/main/resources/view/HomeLayout.fxml
+++ b/src/main/resources/view/HomeLayout.fxml
@@ -13,7 +13,7 @@
             <Font size="28.0" />
          </font>
       </Text>
-      <Button layoutX="233.0" layoutY="92.0" mnemonicParsing="false" prefHeight="123.0" prefWidth="144.0" text="Go to Private Message Menu" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="privateMessageButton" layoutX="233.0" layoutY="92.0" mnemonicParsing="false" prefHeight="123.0" prefWidth="144.0" text="Go to Private Message Menu" textAlignment="CENTER" wrapText="true" />
       <Button fx:id="chatGroupButton" layoutX="396.0" layoutY="92.0" mnemonicParsing="false" prefHeight="123.0" prefWidth="144.0" text="Go to ChatGroup Menu" textAlignment="CENTER" wrapText="true" />
       <Button fx:id="myCircleButton" layoutX="71.0" layoutY="92.0" mnemonicParsing="false" prefHeight="123.0" prefWidth="144.0" text="Go to MyCircle Menu" textAlignment="CENTER" wrapText="true" />
       <Button layoutX="36.0" layoutY="289.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="167.0" text="Summary Report" textAlignment="CENTER" wrapText="true" />
