--- a/src/main/resources/view/PrivateMessageLayout.fxml
+++ b/src/main/resources/view/PrivateMessageLayout.fxml
@@ -17,5 +17,6 @@
       <ListView fx:id="friendsList" layoutX="438.0" layoutY="66.0" prefHeight="384.0" prefWidth="148.0" />
       <Label layoutX="489.0" layoutY="41.0" text="Friends" />
       <Label layoutX="196.0" layoutY="41.0" text="Messages" />
+      <Button fx:id="refreshButton" layoutX="524.0" layoutY="14.0" mnemonicParsing="false" text="Refresh" />
    </children>
 </AnchorPane>
