time for demo now works

--- a/src/main/resources/view/RootLayout.fxml
+++ b/src/main/resources/view/RootLayout.fxml
@@ -19,7 +19,7 @@
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
                   <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
+                    <MenuItem fx:id="editTimeMenuItem" mnemonicParsing="false" text="Edit Time" />
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
