--- a/src/main/resources/view/HomeLayout.fxml
+++ b/src/main/resources/view/HomeLayout.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -23,5 +25,8 @@
       <Label fx:id="loggedinLabel" layoutX="14.0" layoutY="436.0" prefHeight="17.0" prefWidth="193.0" text="Logged In:" />
       <Label fx:id="isManagerLabel" layoutX="14.0" layoutY="457.0" prefHeight="17.0" prefWidth="193.0" text="Is Manager?:" />
       <Button fx:id="topicWordButton" layoutX="237.0" layoutY="393.0" mnemonicParsing="false" text="Set my topic words" />
+      <DatePicker fx:id="datePicker" layoutX="430.0" layoutY="423.0" prefHeight="27.0" prefWidth="126.0" promptText="Date" />
+      <TextField fx:id="timeTextField" layoutX="430.0" layoutY="387.0" prefHeight="27.0" prefWidth="126.0" promptText="Time" />
+      <Button fx:id="setTimeButton" layoutX="430.0" layoutY="461.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="105.0" text="Set Time" />
    </children>
 </AnchorPane>
