--- a/src/main/resources/view/MyCircleMenuLayout.fxml
+++ b/src/main/resources/view/MyCircleMenuLayout.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -16,5 +17,7 @@
       <Button fx:id="viewMessagesButton" layoutX="215.0" layoutY="187.0" mnemonicParsing="false" text="View MyCircle Messages" />
       <Button fx:id="viewRequestsButton" layoutX="218.0" layoutY="237.0" mnemonicParsing="false" text="View MyCircle Requests" />
       <Button fx:id="searchMessagesButton" layoutX="237.0" layoutY="283.0" mnemonicParsing="false" text="Search Messages" />
+      <ListView fx:id="friendsList" layoutX="14.0" layoutY="74.0" prefHeight="400.0" prefWidth="166.0" />
+      <Label layoutX="21.0" layoutY="50.0" text="MyCircle" />
    </children>
 </AnchorPane>
