--- a/src/main/resources/view/HomeLayout.fxml
+++ b/src/main/resources/view/HomeLayout.fxml
@@ -32,5 +32,6 @@
       <Button fx:id="managerTopMessagesButton" layoutX="195.0" layoutY="237.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="137.0" text="Find top messages" visible="false" />
       <Button fx:id="managerInactiveUsersButton" layoutX="344.0" layoutY="237.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="105.0" text="Inactive users" visible="false" />
       <Button fx:id="managerFullReportButton" layoutX="459.0" layoutY="237.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="105.0" text="FULL REPORT" visible="false" />
+      <Button fx:id="managerRegisterButton" layoutX="74.0" layoutY="393.0" mnemonicParsing="false" text="Regiser a User" visible="false" />
    </children>
 </AnchorPane>
