--- a/src/main/resources/view/SearchUsersLayout.fxml
+++ b/src/main/resources/view/SearchUsersLayout.fxml
@@ -2,10 +2,10 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <AnchorPane fx:id="searchTextField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.cs174a.buzmo.controllers.SearchUsersController">
    <children>
@@ -17,5 +17,8 @@
       <ChoiceBox fx:id="recentChoiceBox" layoutX="242.0" layoutY="53.0" prefWidth="150.0" />
       <Button fx:id="searchButton" layoutX="484.0" layoutY="90.0" mnemonicParsing="false" text="Search" />
       <TextField fx:id="numMessagesTextField" layoutX="242.0" layoutY="90.0" promptText="Number of messages " />
+      <Label layoutX="242.0" layoutY="33.0" text="Most Recent Posting Within" />
+      <ChoiceBox fx:id="choiceBox" layoutX="412.0" layoutY="53.0" prefWidth="150.0" />
+      <Label layoutX="435.0" layoutY="33.0" text="Friends/All Users" />
    </children>
 </AnchorPane>
